--- a/pixelpuncher/templates/game/play.html
+++ b/pixelpuncher/templates/game/play.html
@@ -22,8 +22,8 @@
             {% if can_punch %}
               <div class="game-actions">
                 {% for player_skill in player.skills.all %}
-                  <a class="btn btn-primary {% if player.current_energy < player_skill.skill.energy_cost %}disabled{% endif %}"
-                     href="{% url "game:skill" player_skill.skill.id %}">{{ player_skill }} ({{ player_skill.skill.energy_cost }} EP)</a>
+                  <a class="btn btn-primary btn-game-action {% if player.current_energy < player_skill.skill.energy_cost %}disabled{% endif %}"
+                     href="{% url "game:skill" player_skill.id %}">{{ player_skill }} ({{ player_skill.skill.energy_cost }} EP)</a>
                 {% endfor %}
                 <a class="btn btn-warning" href="{% url "game:taunt" %}">Taunt</a>
                 <a class="btn btn-danger" href="{% url "game:skip" %}">Leave</a>
