--- a/pixelpuncher/templates/player/_inventory.html
+++ b/pixelpuncher/templates/player/_inventory.html
@@ -1,6 +1,12 @@
-<h4>Inventory</h4>
+<h4>Backpack</h4>
 
- <table class="table table-striped">
+ <table class="table table-striped table-hover">
+   <thead>
+    <tr>
+      <th>Item Name</th>
+      <th class="item-options">Options</th>
+    </tr>
+  </thead>
    {% for item in items %}
     <tr>
       <td class="item-name">
@@ -14,6 +20,12 @@
           <a href="{% url "player:use" item.id %}">{{ item.display_verb|title }}</a> |
           <a href="{% url "player:drop" item.id %}">Drop</a>
         ]
+      </td>
+    </tr>
+  {% empty %}
+     <tr>
+      <td colspan="2" class="item-name">
+        Empty
       </td>
     </tr>
   {% endfor %}
