--- a/pixelpuncher/templates/player/detail.html
+++ b/pixelpuncher/templates/player/detail.html
@@ -2,6 +2,7 @@
 {% load staticfiles i18n %}
 {% load apps_item %}
 {% load apps_player %}
+{% load apps_game %}
 
 {% block content %}
 <section class="" id="create">
@@ -17,57 +18,88 @@
     </div>
 
     <div class="row">
-      <div class="col-md-2">
-        <div class="pull-left player-avatar"><img src="{% static 'images/avatar-male-large.png' %}"> </div>
+
+      <div class="col-md-3" style="text-align: center;">
+        <div class="player-avatar">
+          <img src="{% static 'images/avatar-male-large.png' %}">
+        </div>
+        <div>
+          <h3>{{ player.name }}</h3>
+        </div>
       </div>
+
       <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Profile</h3>
+          </div>
+          <div class="panel-body">
+            {% status_bar 'Health' player.current_health player.total_health 'progress-bar-danger' %}
+            {% status_bar 'Energy' player.current_energy player.total_energy 'progress-bar-success' %}
 
-        <h3>{{ player.name }}</h3>
-        <h4>Level {{ player.level }}</h4>
-        <table class="table table-striped">
-          <tr>
-            <td class="player-stats-title">XP:</td>
-            <td class="player-stats-numbers">{% display_current_next_xp player %}</td>
-          </tr>
-
-          <tr>
-            <td class="player-stats-title">Power:</td>
-            <td class="player-stats-numbers">{{ player.effect_power }} ({{ player.power }})</td>
-          </tr>
-          <tr>
-            <td class="player-stats-title">Technique:</td>
-            <td class="player-stats-numbers">{{ player.effect_technique }} ({{ player.technique }})</td>
-          </tr>
-          <tr>
-            <td class="player-stats-title">Endurance:</td>
-            <td class="player-stats-numbers">{{ player.effect_endurance }} ({{ player.endurance }})</td>
-          </tr>
-
-          <tr>
-            <td class="player-stats-title">Energy:</td>
-            <td class="player-stats-numbers">{{ player.current_energy }} / {{ player.total_energy }}</td>
-          </tr>
-
-          <tr>
-            <td class="player-stats-title">Health:</td>
-            <td class="player-stats-numbers">{{ player.current_health }} / {{ player.total_health }}</td>
-          </tr>
-        </table>
+            <table class="table table-striped">
+              <tr>
+                <td class="player-stats-title">Power:</td>
+                <td class="player-stats-numbers">{{ player.effect_power }} ({{ player.power }})</td>
+              </tr>
+              <tr>
+                <td class="player-stats-title">Technique:</td>
+                <td class="player-stats-numbers">{{ player.effect_technique }} ({{ player.technique }})</td>
+              </tr>
+              <tr>
+                <td class="player-stats-title">Endurance:</td>
+                <td class="player-stats-numbers">{{ player.effect_endurance }} ({{ player.endurance }})</td>
+              </tr>
+              <tr>
+                <td class="player-stats-title">Current Occupation:</td>
+                <td class="player-stats-numbers">Professional Puncher</td>
+              </tr>
+              <tr>
+                <td class="player-stats-title">Previous Occupation:</td>
+                <td class="player-stats-numbers">{{ player.previous_occupation }}</td>
+              </tr>
+            </table>
+          </div>
+        </div>
 
       </div>
+
       <div class="col-md-3">
-        <h3>&nbsp;</h3>
-        <h4>Armor</h4>
-        <table class="table table-striped">
-          <tr>
-            <td>Head</td>
-            <td>{{ player.head }}</td>
-          </tr>
-          <tr>
-            <td>Gloves</td>
-            <td>{{ player.gloves|default_if_none:"-" }}</td>
-          </tr>
-        </table>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Experience</h3>
+          </div>
+          <div class="panel-body">
+            {% status_bar 'XP' player.xp player.xp_to_next_level 'progress-bar-info' %}
+
+            <h5>Attribute Points: {{ player.attribute_points }} [<a href="{% url "player:spend" player.pk %}">Spend</a>]</h5>
+            <h5>Level: {{ player.level }}</h5>
+          </div>
+        </div>
+
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Wearing</h3>
+          </div>
+          <div class="panel-body">
+
+            <table class="table table-striped">
+              <tr>
+                <td>Head</td>
+                <td>{{ player.head|default_if_none:"-"  }}</td>
+              </tr>
+              <tr>
+                <td>Gloves</td>
+                <td>{{ player.gloves|default_if_none:"-" }}</td>
+              </tr>
+              <tr>
+                <td>Torso</td>
+                <td>{{ player.torso|default_if_none:"-" }}</td>
+              </tr>
+            </table>
+
+          </div>
+        </div>
       </div>
     </div>
   </div>
