--- a/pixelpuncher/templates/base.html
+++ b/pixelpuncher/templates/base.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- This file store project specific CSS -->
-    <link href="{% static 'css/spacelab.css' %}" rel="stylesheet">
+    <link href="{% static 'css/superhero.css' %}" rel="stylesheet">
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
     {% endblock %}
 
@@ -49,6 +49,12 @@
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
+            {% if request.user.is_authenticated %}
+              <li>
+                <a href="{% url "game:play" %}">Play</a>
+              </li>
+
+            {% endif %}
             <li>
               <a href="/">Top Punchers</a>
             </li>
@@ -60,35 +66,16 @@
                 <li><a href="{% url "game:levels" %}">Level XP Breakdown</a></li>
               </ul>
             </li>
-
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
             {% if request.user.is_authenticated %}
-              {% if player %}
-
-              <li>
-                <a href="{% url "game:play" %}">Punch!</a>
-              </li>
-              <li>
-                <a href="{% url "game:reset" %}">Punches: {{ player.punches }}</a>
-              </li>
-              <li>
-                <a href="{% url 'users:detail' request.user.username  %}">{% trans "Profile" %}</a>
-              </li>
-              {% endif %}
-              <li>
-                <a href="{% url 'account_logout' %}">{% trans "Logout" %}</a>
-              </li>
+              <li><a href="{% url 'users:detail' request.user.username  %}">{% trans "Profile" %}</a></li>
+              <li><a href="{% url 'account_logout' %}">{% trans "Logout" %}</a></li>
             {% else %}
-                <li>
-                  <a id="sign-up-link" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
-                </li>
-                <li>
-                  <a id="log-in-link" href="{% url 'account_login' %}">{% trans "Log In" %}</a>
-                </li>
-              {% endif %}
-
+              <li><a id="sign-up-link" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a></li>
+              <li><a id="log-in-link" href="{% url 'account_login' %}">{% trans "Log In" %}</a></li>
+            {% endif %}
           </ul>
         </div>
       </div>
@@ -97,45 +84,6 @@
     <div class="m-b">
       <nav class="navbar navbar-dark navbar-static-top bg-inverse">
         <div class="container">
-          <a class="navbar-brand" href="/">Pixel Puncher</a>
-          <button type="button" class="navbar-toggler hidden-sm-up pull-right" data-toggle="collapse" data-target="#bs-navbar-collapse-1">
-            &#9776;
-          </button>
-
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-toggleable-xs" id="bs-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'home' %}">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'about' %}">About</a>
-              </li>
-            </ul>
-
-            <ul class="nav navbar-nav pull-right">
-              {% if request.user.is_authenticated %}
-                {% if player %}
-                <li class="nav-item">
-                  {% current_punches request.user %}
-                </li>
-                {% endif %}
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Logout" %}</a>
-                </li>
-              {% else %}
-                <li class="nav-item">
-                  <a id="sign-up-link" class="nav-link" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
-                </li>
-                <li class="nav-item">
-                  <a id="log-in-link" class="nav-link" href="{% url 'account_login' %}">{% trans "Log In" %}</a>
-                </li>
-              {% endif %}
-            </ul>
-          </div>
         </div>
       </nav>
     </div>
