--- a/pixelpuncher/templates/pages/home.html
+++ b/pixelpuncher/templates/pages/home.html
@@ -4,15 +4,18 @@
 {% block content %}
   <div class="row">
 
-    <div class="well well-lg col-lg-7">
-      <h1>PUNCH!</h1>
-    </div>
-    <div class="well well-lg col-lg-3 col-lg-offset-1">
-      <h2 class="text-warning">Warning!</h2>
+    <div class="jumbotron">
+      <h1>Pixel Puncher</h1>
       <p>
-        This game depicts extreme violence against inanimate objects.
-        No vegetables were harmed in the making of this game.
+        Want to explore endless dungeons? Want to discover unique treasure? Want to face epic challenges?
+        Then look somewhere else! Want a turn based combat game about punching stuff? Play Pixel Puncher!
       </p>
+      <p><a href="{% url 'account_signup' %}" class="btn btn-primary btn-lg">Play Now!</a></p>
+    </div>
+
+    <div>
+        Warning: This game depicts extreme violence against inanimate objects.
+        No vegetables were harmed in the making of this game.
     </div>
   </div>
 {% endblock content %}
