--- a/pixelpuncher/templates/player/create.html
+++ b/pixelpuncher/templates/player/create.html
@@ -2,33 +2,44 @@
 
 {% block content %}
 
- <section class="" id="create">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-6">
-              <h3 style="padding-bottom: 20px;">Create Player</h3>
-              <form action="" method="post" class="form-horizontal">
-              {% csrf_token %}
+<section class="" id="create">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6">
+        <h3 style="padding-bottom: 20px;">Create Player</h3>
+        <form action="" method="post" class="form-horizontal">
+          <fieldset>
+            {% csrf_token %}
 
-                <div class="form-group">
-                  <label for="text" class="col-sm-4 control-label form-text">Name</label>
-                  <div class="col-sm-6">
-                  {{ form.name }}
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="text" class="col-sm-4 control-label form-text">Previous Occupation</label>
-                  <div class="col-sm-6">
-                  {{ form.previous_occupation }}
-                  </div>
-                </div>
-
-              <input type="submit" value="Create" class="btn btn-default btn-lg btn-declaration" />
-            </form>
-
+            <div class="form-group">
+              <label for="text" class="col-sm-4 control-label form-text">Name</label>
+              <div class="col-sm-6">
+                {{ form.name }}
+              </div>
             </div>
-        </div>
+            <div class="form-group">
+              <label for="text" class="col-sm-4 control-label form-text">Previous Occupation</label>
+              <div class="col-sm-6">
+                {{ form.previous_occupation }}
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="text" class="col-sm-4 control-label form-text">Gender</label>
+              <div class="col-sm-6">
+              {{ form.gender }}
+              </div>
+            </div>
+
+            <div class="col-lg-10 col-lg-offset-4">
+              <input type="submit" value="Create" class="btn btn-primary btn-lg" />
+            </div>
+
+          </fieldset>
+        </form>
+      </div>
     </div>
-  </section>
+  </div>
+</section>
 
 {% endblock content %}
