--- a/pixelpuncher/templates/player/_inventory.html
+++ b/pixelpuncher/templates/player/_inventory.html
@@ -1,26 +1,26 @@
-<h4>Backpack</h4>
-
- <table class="table table-striped table-hover">
+ <table class="table table-hover">
    <thead>
     <tr>
-      <th>Item Name</th>
-      <th class="item-options">Options</th>
+      <th class="table-inventory-header">Item Name</th>
+      <th class="table-inventory-header item-options">Options</th>
     </tr>
   </thead>
    {% for item in items %}
     <tr>
       <td class="item-name">
+        <i class="mdi {{ item.item_type.icon }}"></i>
         {{ item }}
-        {% if item.item_type.stackable %}
+        {% if item.remaining_uses > 0 %}
           (x{{ item.remaining_uses }})
         {% endif %}
       </td>
       <td class="item-options">
         [
-          <a href="{% url "player:examine" item.id %}">Examine</a> |
-          <a href="{% url "player:use" item.id %}">{{ item.display_verb|title }}</a> |
-          <a href="{% url "player:drop" item.id %}">Drop</a>
+          <a class="text-info" href="#" data-toggle="modal" data-target="#itemModal{{ item.pk }}">Examine</a> |
+          <a class="text-success" href="{% url "player:use" item.id %}">{{ item.display_verb|title }}</a> |
+          <a class="text-danger" href="{% url "player:drop" item.id %}">Drop</a>
         ]
+        {% include "player/_item_modal.html" %}
       </td>
     </tr>
   {% empty %}
