--- a/pixelpuncher/templates/player/_mini_profile.html
+++ b/pixelpuncher/templates/player/_mini_profile.html
@@ -17,8 +17,15 @@
   {% status_bar 'XP' player.xp player.xp_to_next_level 'progress-bar-info' %}
 
   <div>
-    <span>{{ player.punches }} AP</span>
-    <span class="pull-right">{{ player.pixels }} <i class="mdi mdi-vector-arrange-below"></i> </span>
+    <span data-toggle="tooltip" title="Action Points" data-placement="right">
+      {{ player.punches }} AP
+    </span>
+    <span class="pull-right" data-toggle="tooltip" title="Pixels" data-placement="right">
+      {{ player.pixels }}
+      <i class="mdi mdi-vector-arrange-below" ></i>
+    </span>
+
+
   </div>
 
 </div>
