--- a/pixelpuncher/templates/game/play.html
+++ b/pixelpuncher/templates/game/play.html
@@ -11,6 +11,9 @@
         </div>
 
         <div class="col-md-6">
+          <div class="page-header">
+            <h1><i class="text-info mdi {{ location.icon }}"></i>{{ location.name }}</h1>
+          </div>
           <div class="combatlog" id="combatlog" style="white-space: pre;">
 
           </div>
