--- a/pixelpuncher/templates/player/_item_modal.html
+++ b/pixelpuncher/templates/player/_item_modal.html
@@ -13,7 +13,7 @@
       </div>
       <div class="modal-body skill-detail">
         <h5>
-          {{ item.item_type.description|title }}
+          {{ item.item_type.description }}
 
         </h5>
         <div>{{ item.item_type.get_base_type_display }}</div>
