--- a/pixelpuncher/templates/location/_home.html
+++ b/pixelpuncher/templates/location/_home.html
@@ -1,6 +1,8 @@
+  <p>Not much here... just a bed. You are sooo boring.</p>
+
   {% for service in location.services.all %}
     <a class="btn btn-sm btn-success" href="{% url "location:service" location.pk service.pk %}">
-      {{ service.service.name }}
+      <i class="mdi {{ service.service.icon }}"></i> {{ service.service.name }}
       {% if service.action_point_cost > 0 %}({{ service.action_point_cost }} AP){% endif %}
     </a>
   {% endfor %}
