--- a/pixelpuncher/templates/location/_home.html
+++ b/pixelpuncher/templates/location/_home.html
@@ -1,5 +1,9 @@
   <p>Not much here... just a bed. You are sooo boring.</p>
 
+    <a class="btn btn-sm btn-info" href="{% url "player:achievements" %}">
+      <i class="mdi"></i> Wall of achievements</a>
+
+
   {% for service in location.services.all %}
     <a class="btn btn-sm btn-success" href="{% url "location:service" location.pk service.pk %}">
       <i class="mdi {{ service.service.icon }}"></i> {{ service.service.name }}
