--- a/pixelpuncher/templates/player/detail.html
+++ b/pixelpuncher/templates/player/detail.html
@@ -57,6 +57,7 @@
     <div class="col-lg-6">
       <div class="panel panel-default">
         <div class="panel-heading">
+          {% include "player/_currency.html" %}
           <h3 class="panel-title"><i class="mdi mdi-briefcase"></i> Inventory</h3>
         </div>
         <div class="panel-body">
