Added megapixel support to purchase.

--- a/pixelpuncher/templates/location/_selling.html
+++ b/pixelpuncher/templates/location/_selling.html
@@ -11,7 +11,14 @@
     {% for item in location.items.all %}
       <tr>
         <td>{{ item.item_type.name }}</td>
-        <td style="text-align: right;">${{ item.price }}</td>
+        <td style="text-align: right;">
+          {{ item.price }}
+          {% if item.currency == 'P' %}
+            <i class="mdi mdi-coin" data-toggle="tooltip" title="Pixels" data-placement="right"></i>
+          {% else %}
+            <i class="mdi mdi-diamond" data-toggle="tooltip" title="MegaPixels" data-placement="right"></i>
+          {% endif %}
+        </td>
         <td style="text-align: right;"><a class="btn btn-sm btn-success" href="{% url "location:purchase" location.pk item.pk %}">Buy</a></td>
       </tr>
     {% endfor %}
