--- a/pixelpuncher/templates/player/_currency.html
+++ b/pixelpuncher/templates/player/_currency.html
@@ -1,6 +1,6 @@
 <span style="padding-left: 20px;" class="pull-right" data-toggle="tooltip" title="MegaPixels" data-placement="right">
   {{ player.megapixels }}
-  <i class="mdi mdi-diamond" ></i>&nbsp;
+  <i class="mdi mdi-diamond" ></i>
 </span>
 
 <span class="pull-right" data-toggle="tooltip" title="Pixels" data-placement="right">
