--- a/pixelpuncher/templates/player/_currency.html
+++ b/pixelpuncher/templates/player/_currency.html
@@ -1,9 +1,9 @@
 <span style="padding-left: 20px;" class="pull-right" data-toggle="tooltip" title="MegaPixels" data-placement="right">
   {{ player.megapixels }}
-  <i class="mdi mdi-diamond" ></i>
+  <i class="mdi mdi-diamond text-info" ></i>
 </span>
 
 <span class="pull-right" data-toggle="tooltip" title="Pixels" data-placement="right">
   {{ player.pixels }}
-  <i class="mdi mdi-coin" ></i>
+  <i class="mdi mdi-coin text-success" ></i>
 </span>
